
* Release history

** v0.11.0

- Make transient menu be able to fit in narrow screen
  - https://github.com/tninja/aider.el/issues/157 by markokocic
  - Added aider-transient-menu-2cols / aider-transient-menu-1col
- transient-setup: Not a transient prefix command or group definition: aider--menu-aider-process
  - https://github.com/tninja/aider.el/issues/163, found by Spike-Leung and markokocic
  - Fixed by Spike-Leung in https://github.com/tninja/aider.el/pull/164
    - It require latest >= transient-20250520.1040
    - [X] will update transient version dependency to 0.9.0 after it got released
- Better align aider-transient-menu-2col, by Spike-Leung
- Fix error during redisplay (jit-lock-function) when working with comint mode
  - https://github.com/tninja/aider.el/issues/159 by velimir
  - change came from https://github.com/MatthewZMD/aidermacs/pull/131/files by @CeleritasCelery    
- aider-add-module support regex filtering on file content
- Redesign diff generation function: aider--magit-generate-feature-branch-diff-file
  - Redesign the function to make it more clear to user: at first, let user choose diff type (eg. staged, base branch, branch range, commit hash. For branch range, ask user if it is local or remote. Then perform corresponding action given these detail requirement.
  - Move git related feature to aider-git.el
- Let aider-comint-session be able to scroll up / search the prompt across sessions
  - By parsing .aider.input.history file, use ctrl + up / down key to scroll, alt + r to search
  - [X] TODO: integrate .aider.input.history with aider-helm.el 
- Let aider to fix the errors reported by flycheck: aider-flycheck-fix-errors-in-scope 

** v0.10.0

- Add diff-change aider code snippet, it is a useful pattern to let aider suggest code change given diff as example
- Add aider-software-planning.el: start a software planning session with Aider