@@ -104,7 +104,7 @@ Also based on aider LLM benchmark: https://aider.chat/docs/leaderboards/"
   ("f" "Add Current/Marked File (C-u: readonly)"  aider-add-current-file-or-dired-marked-files)
   ("w" "Add All Files in Window"                  aider-add-files-in-current-window)
   ("M" "Add Module w/o grep (C-u: readonly)"      aider-add-module)
-  ("O" "Drop Current File"                        aider-drop-current-file)
+  ("O" "Drop File in Buffer / under Cursor"       aider-drop-current-file)
   ("m" "Show Last Commit (C-u: magit-log)"        aider-magit-show-last-commit-or-log)
   ("u" "Undo Last Change"                         aider-undo-last-change)
   ("v" "Pull or Review Code Change"               aider-pull-or-review-diff-file)
